2007-02-03  Stefan Jahn  <stefan@lkcc.org>

	* check_spice.cpp: Translating VON and VOFF properties of
	switches into Vt and Vh.  Also fixing R value for resistors
	whose value is also given in the resistor model it refers to.

2007-02-01  Stefan Jahn  <stefan@lkcc.org>

	* scan_spice.l: Allowing subcircuit identifiers to begin with
	a digit.  Also fixing it afterwards.  Introduced component
	suffix macro.  Identifying VSWITCH model.

	* check_spice.cpp: Allowing the SW model also be referenced as
	VSWITCH.

2007-01-31  Stefan Jahn  <stefan@lkcc.org>

	* scan_spice.l: Allowing '_' in device identifiers.  Allowing
	'/' and '-' in other identifiers (e.g. subcircuit) and translate
	them into '_' for Qucs.

	* parse_spice.y: Allowing resistor model to be referenced.

	* check_spice.cpp: Added translations for resistor models.  Fixed
	DC voltage source notation 'VDC 1 0 DC 2'.

2007-01-30  Stefan Jahn  <stefan@lkcc.org>

	* qucs_producer.cpp: Adding subcircuit instance if the SPICE
	file just contains a single subcircuit definition.

2007-01-23  Stefan Jahn  <stefan@lkcc.org>

	* parse_spice.y: Accept end of file after .ENDS token.

	* scan_spice.l: Ignore inlined comments.

2007-01-10  Stefan Jahn  <stefan@lkcc.org>

	* check_spice.cpp: Fixed F and H source values (current controlled
	sources).

2007-01-07  Michael Margraf  <michael.margraf@alumni.tu-berlin.de>

	* check_spice.cpp: correct polarity of AC and DC current sources,
	thanks to Rainer Wirtz

2006-08-30  Stefan Jahn  <stefan@lkcc.org>

	* parse_spice.y: Reverting the patch about the default value
	for F/E/G/H controlled sources.

2006-08-26  Stefan Jahn  <stefan@lkcc.org>

	* scan_spice.l, parse_spice.y, check_spice.cpp: Parsing but
	ignoring behavioural sources.  Translation of L's and C's
	initial conditions.

2006-08-20  Stefan Jahn  <stefan@lkcc.org>

	* parse_spice.y: When value for F/E/G/H controlled sources is
	missing then using a default transconductance/transresistance/gain
	of 1.
